[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/layout.png" type="Texture" id=1]
[ext_resource path="res://sounds/Ampumis 1 Cropped.mp3" type="AudioStream" id=2]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=3]
[ext_resource path="res://sprites/iturret.png" type="Texture" id=4]
[ext_resource path="res://sprites/light.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 10.0997 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.544872, 1 )
colors = PoolColorArray( 1.62, 0.76, 0.1, 1, 2.05, 0.42, 0.05, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.452514, 0.9 ), 0.0, 0.0214115, 0, 0, Vector2( 1, 0 ), -2.44091, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.5
flag_disable_z = true
spread = 96.68
gravity = Vector3( 0, 0, 0 )
initial_velocity = 252.89
initial_velocity_random = 0.43
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.02
scale_random = 0.03
scale_curve = SubResource( 6 )
color = Color( 0.74902, 0.65098, 0.388235, 1 )
color_initial_ramp = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=2]

[node name="enemy" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 0.45098, 0.647059, 0.329412, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.27865, 1.00871e-06 )
rotation = 1.5708
scale = Vector2( 1.25909, 2.61689 )
shape = SubResource( 1 )

[node name="gun" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="gun"]
modulate = Color( 0.45098, 0.647059, 0.329412, 1 )
position = Vector2( 19, 0 )
rotation = 1.57079
texture = ExtResource( 4 )

[node name="shootPoint" type="Position2D" parent="gun/Sprite"]
position = Vector2( 0.000125885, -20 )
rotation = -1.57079

[node name="shootParticles2D" type="Particles2D" parent="gun/Sprite/shootPoint"]
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 15
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource( 12 )
texture = ExtResource( 5 )

[node name="Area2d" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2d"]
modulate = Color( 0.529412, 1, 0.431373, 1 )
scale = Vector2( -2.74326, 1.48648 )
shape = SubResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
process_priority = 1
path_desired_distance = 50.0
target_desired_distance = 50.0
path_max_distance = 10.0

[node name="1shootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="newTargetPathTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 4.6, 5.08 )
texture = ExtResource( 5 )
texture_scale = 0.24
color = Color( 0.94902, 0.662745, 0.662745, 1 )
energy = 0.66
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 4

[node name="shootPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
attenuation = 2.54912

[connection signal="body_exited" from="Area2d" to="." method="_on_Area2d_body_exited"]
[connection signal="timeout" from="newTargetPathTimer" to="." method="_on_TargetPathTimer_timeout"]
